fix spacing slider

--- a/frontend/src/css/_main.scss
+++ b/frontend/src/css/_main.scss
@@ -234,9 +234,6 @@ ul {
   font-size: 16px;
   font-weight: 500;
 }
-.slider-padding {
-  padding:1rem 2rem;
-}
 .auto-padding {
   padding:10px 16px;
 }
